Fix blog content alignment and justify text

--- a/style.css
+++ b/style.css
@@ -680,12 +680,12 @@ body.light-mode .cert-date {
   flex-direction: row-reverse;
 }
 .blog-container:nth-child(even) .blog-content {
-  align-items: flex-end;
-  text-align: right;
+  align-items: flex-start;
+  text-align: left;
 }
 .blog-container:nth-child(even) .blog-divider,
 .blog-container:nth-child(even) .blog-date {
-  align-self: flex-end;
+  align-self: flex-start;
 }
 .blog-image {
   flex: 0 0 35%;
@@ -742,6 +742,7 @@ body.light-mode .blog-date {
   color: var(--text-muted);
   font-size: 16px;
   line-height: 1.8;
+  text-align: justify;
 }
 @media (max-width: 900px) {
   .blog-container, .blog-container:nth-child(even) {
